@@ -143,7 +143,8 @@ abstract class CScreenLldGraphBase extends CScreenBase {
 			'width' => $this->screenitem['width'],
 			'dynamic' => $this->screenitem['dynamic'],
 			'halign' => $this->screenitem['halign'],
-			'valign' => $this->screenitem['valign']
+			'valign' => $this->screenitem['valign'],
+			'url' => ''
 		);
 	}
 
