@@ -100,7 +100,6 @@ class CScreenLldSimpleGraph extends CScreenLldGraphBase {
 
 			$screenItem['resourceid'] = $itemId;
 			$screenItem['screenitemid'] = $itemId;
-			$screenItem['url'] = $this->screenitem['url'];
 
 			$screenItems[] = $screenItem;
 		}
